--- a/Levantamento de Perdas/Src/Usinagem_Marcha_Re.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Marcha_Re.fx.yaml
@@ -4,7 +4,7 @@ Usinagem_Marcha_Re As screen:
 
     Image3_16 As image:
         Height: =968
-        Image: =Usinagem_Marcha_Ré
+        Image: ='Usinagem_Marcha_Ré'
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
@@ -51,7 +51,7 @@ Usinagem_Marcha_Re As screen:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =169
+        Height: =202
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
@@ -68,16 +68,16 @@ Usinagem_Marcha_Re As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =151
-        X: =473
-        Y: =363
+        Width: =155
+        X: =474
+        Y: =290
         ZIndex: =5
 
     Btnmaq_151 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =169
+        Height: =202
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
@@ -94,16 +94,16 @@ Usinagem_Marcha_Re As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =151
-        X: =473
-        Y: =573
+        Width: =155
+        X: =474
+        Y: =536
         ZIndex: =6
 
     Btnmaq_154 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =169
+        Height: =202
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
@@ -120,16 +120,16 @@ Usinagem_Marcha_Re As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =151
-        X: =473
-        Y: =783
+        Width: =155
+        X: =474
+        Y: =784
         ZIndex: =7
 
     Btnmaq_155 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =169
+        Height: =202
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
@@ -146,8 +146,8 @@ Usinagem_Marcha_Re As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =151
-        X: =154
-        Y: =573
+        Width: =155
+        X: =158
+        Y: =536
         ZIndex: =8
 
