--- a/Levantamento de Perdas/Src/Tel_Edit_Perdas.fx.yaml
+++ b/Levantamento de Perdas/Src/Tel_Edit_Perdas.fx.yaml
@@ -1053,7 +1053,7 @@
             DisplayMode: =Parent.DisplayMode
             DisplayName: =DataSourceInfo([@LancamentoProducao],DataSourceInfo.DisplayName,"QUANTIDADE")
             Fill: =RGBA(0, 0, 0, 0)
-            Height: =178
+            Height: =138
             MaxLength: =DataSourceInfo([@LancamentoProducao], DataSourceInfo.MaxLength, "QUANTIDADE")
             Required: =true
             Update: =DataCardquantidade_1.Text
@@ -1478,12 +1478,11 @@
                     ) 
         Layout: =Layout.Vertical
         NavigationStep: =2
-        OnSelect: =Navigate(Tela_Detail_Producao, ScreenTransition.None)
         TemplatePadding: =1
         TemplateSize: =63
         Transition: =Transition.Pop
         Width: =Parent.Width
-        Y: =966
+        Y: =QUANTIDADE_DataCard2_1.Y + QUANTIDADE_DataCard2_1.Height
         ZIndex: =13
 
         Label1_3 As label:
