--- a/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
@@ -1228,7 +1228,7 @@
         Label1_2 As label:
             Fill: =If(ThisItem.IsSelected,RGBA(6,72,34,1))
             Height: =62
-            OnSelect: =Select(Parent);Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & Value(DataCardhora_inicio.Selected.Result)) ; Set(varDelta , Cap_Produtiva - DataCardquantidade)
+            OnSelect: =Navigate(Tela_Inicial_Producao)
             Size: =21
             Text: =
             Width: =638
@@ -1244,7 +1244,6 @@
         Body1_8 As label:
             Color: =RGBA(255, 255, 255, 1)
             Height: =47
-            OnSelect: =Select(Parent)
             PaddingBottom: =0
             PaddingLeft: =0
             PaddingRight: =0
@@ -1259,7 +1258,6 @@
             Align: =Align.Center
             Color: =RGBA(255, 255, 255, 1)
             Height: =47
-            OnSelect: =Select(Parent)
             PaddingBottom: =0
             PaddingLeft: =0
             PaddingRight: =0
