--- a/Levantamento de Perdas/Src/Tel_Edit_Perdas.fx.yaml
+++ b/Levantamento de Perdas/Src/Tel_Edit_Perdas.fx.yaml
@@ -1503,8 +1503,8 @@
 
         Body1_9 As label:
             Color: =RGBA(255, 255, 255, 1)
-            Height: =47
-            OnSelect: =Select(Parent)
+            Height: =62
+            OnSelect: =Navigate(Tela_Inicial_Perdas)
             PaddingBottom: =0
             PaddingLeft: =0
             PaddingRight: =0
@@ -1518,8 +1518,8 @@
         Body1_11 As label:
             Align: =Align.Center
             Color: =RGBA(255, 255, 255, 1)
-            Height: =47
-            OnSelect: =Select(Parent)
+            Height: =63
+            OnSelect: =Navigate(Tela_Inicial_Perdas)
             PaddingBottom: =0
             PaddingLeft: =0
             PaddingRight: =0
