--- a/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
@@ -1243,7 +1243,8 @@
 
         Body1_8 As label:
             Color: =RGBA(255, 255, 255, 1)
-            Height: =47
+            Height: =62
+            OnSelect: =Navigate(Tela_Inicial_Producao)
             PaddingBottom: =0
             PaddingLeft: =0
             PaddingRight: =0
@@ -1251,13 +1252,14 @@
             Text: |-
                 ="Tipo de Peça: " & ThisItem.TIPO_DE_PECA
             VerticalAlign: =VerticalAlign.Top
-            Width: =405
+            Width: =487
             ZIndex: =8
 
         Body1_10 As label:
             Align: =Align.Center
             Color: =RGBA(255, 255, 255, 1)
-            Height: =47
+            Height: =62
+            OnSelect: =Navigate(Tela_Inicial_Producao)
             PaddingBottom: =0
             PaddingLeft: =0
             PaddingRight: =0
