--- a/Levantamento de Perdas/Src/Usinagem_Luva_3%aa4%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Luva_3%aa4%aa.fx.yaml
@@ -4,7 +4,7 @@ Usinagem_Luva_3ª4ª As screen:
 
     Image3_15 As image:
         Height: =968
-        Image: ='Usinagem_Luva_3ª4ª_2'
+        Image: =Usinagem_Luva_3ª4ª_2
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
