--- a/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
@@ -8338,7 +8338,9 @@
     btn_edit_prod As button:
         Align: =Align.Right
         Height: =23
-        OnSelect: =Navigate(Tela_Inicial_Producao,ScreenTransition.None)
+        OnSelect: |-
+            =Navigate(Tela_Inicial_Producao,ScreenTransition.None);
+            Set(vartela , "Tela_acerto_levantamento")
         PaddingBottom: =0
         PaddingLeft: =0
         PaddingRight: =8
@@ -8360,7 +8362,9 @@
     btn_edit_perdas As button:
         Align: =Align.Right
         Height: =23
-        OnSelect: =Navigate(Tela_Inicial_Perdas,ScreenTransition.None)
+        OnSelect: |-
+            =Navigate(Tela_Inicial_Perdas,ScreenTransition.None);
+            Set(vartela , "Tela_acerto_levantamento")
         PaddingBottom: =0
         PaddingLeft: =0
         PaddingRight: =25
