--- a/Levantamento de Perdas/Src/Ret%edfica_Planet%e1ria.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Planet%e1ria.fx.yaml
@@ -86,7 +86,7 @@ Retífica_Planetária As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "3316027025");
+            =Set( varmaquina , "201405005162");
             Set( varsetor ,  Label_setor_35.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
@@ -152,4 +152,18 @@ Retífica_Planetária As screen:
         X: =218
         Y: =765
         ZIndex: =9
+
+    Label5 As label:
+        Align: =Align.Center
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =119
+        Size: =21
+        Text: |-
+            ="Retífica 
+            Marro 5162
+            OP. 110"
+        Width: =180
+        X: =38
+        Y: =310
+        ZIndex: =10
 
