--- a/Levantamento de Perdas/Src/EditorState/Tela_Inicial_app.editorstate.json
+++ b/Levantamento de Perdas/Src/EditorState/Tela_Inicial_app.editorstate.json
@@ -2744,7 +2744,14 @@
         "HoverFill",
         "Font",
         "FontWeight",
-        "X",
+        {
+          "AFDDataSourceName": "",
+          "AutoRuleBindingEnabled": false,
+          "AutoRuleBindingString": "",
+          "InvariantPropertyName": "X",
+          "IsLockable": false,
+          "NameMapSourceSchema": "?"
+        },
         {
           "AFDDataSourceName": "",
           "AutoRuleBindingEnabled": false,
